fix footer layout on smaller screens

--- a/src/scss/layout/_footer.scss
+++ b/src/scss/layout/_footer.scss
@@ -9,6 +9,10 @@ $two-column: 45em;
   font-size: var(--small);
   grid-area: footer;
   grid-gap: var(--page-margin);
+  grid-template:
+    'contact' min-content
+    'oddnews' min-content
+    'contentinfo' auto / 100%;
   padding: var(--gutter) var(--page-margin) var(--spacer);
 
   @include config.above($two-column) {
